--- a/components/StartingSection/StartingSection.module.css
+++ b/components/StartingSection/StartingSection.module.css
@@ -1,5 +1,5 @@
 .container {
-    margin: 3rem auto;
+    /* margin: 3rem auto; */
     width: 95%;
     max-width: 25rem;
     border-radius: 6px;
@@ -7,6 +7,7 @@
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     padding: 1rem;
     text-align: center;
+    margin: 15rem auto;
 }
 
 .container h1 {
