Completed Profile section

--- a/components/UserProfile/UserProfile.module.css
+++ b/components/UserProfile/UserProfile.module.css
@@ -6,3 +6,10 @@
   .profile h1 {
     font-size: 5rem;
   }
+
+  .section{
+      text-align: center;
+      padding-top: 20px;
+      color: white;
+      font-weight: bold;
+  }
