--- a/components/StartingSection/StartingSection.module.css
+++ b/components/StartingSection/StartingSection.module.css
@@ -7,7 +7,7 @@
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     padding: 1rem;
     text-align: center;
-    margin: 15rem auto;
+    margin: 12rem auto;
 }
 
 .container h1 {
@@ -27,6 +27,17 @@
   }
   
   .control input {
+    font: inherit;
+    background-color: #f1e1fc;
+    color: #38015c;
+    border-radius: 4px;
+    border: 1px solid white;
+    width: 100%;
+    text-align: left;
+    padding: 0.25rem;
+  }
+
+  .control textarea{
     font: inherit;
     background-color: #f1e1fc;
     color: #38015c;
