Profile is updated to show user's posts

--- a/components/UserProfile/ProfilePosts.module.css
+++ b/components/UserProfile/ProfilePosts.module.css
@@ -10,7 +10,22 @@
     margin: 1rem auto;
     color: white;
     font-weight: bold;
+    
 }
+
+.indivPostContainer ul {
+    list-style: none;
+}
+.indivPostContainer li {
+    list-style-type: none;
+}
+
+#postsHeader{
+    text-align: center;
+    color: white;
+}
+
+
 
 .indivPostContainer p {
     word-wrap: break-word;
