--- a/components/UserProfile/ProfileForm.module.css
+++ b/components/UserProfile/ProfileForm.module.css
@@ -5,9 +5,8 @@
       border-radius: 6px;
       background-color: #38015c;
       box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-      padding: 1rem;
       text-align: center;
-      margin: 3rem auto;
+      margin-bottom: 3rem ;
 }
 
 .container img {
