--- a/components/Posts/Posts.module.css
+++ b/components/Posts/Posts.module.css
@@ -17,16 +17,21 @@
 }
 
 .topLine {
-   display: flex;
+ display: flex;
+  
+  
 }
+
 
 .topLine h5 {
   margin-right: 20px;
+  cursor: pointer;
 }
 
 .topLine img {
   margin-top: 10px;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 
@@ -85,6 +90,23 @@
 }
 
 .control textarea{
+    font: inherit;
+    background-color: #f1e1fc;
+    color: #38015c;
+    border-radius: 4px;
+    border: 1px solid white;
+    width: 100%;
+    text-align: left;
+    padding: 0.25rem;
+  }
+  .control label {
+    display: block;
+    color: white;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+  }
+  
+  .control input {
     font: inherit;
     background-color: #f1e1fc;
     color: #38015c;
